--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.1.1",
+        "date-fns": "^2.30.0",
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.2",
         "react-router-dom": "^6.14.2",
         "styled-components": "^6.0.5",
+        "uuid": "^9.0.0",
         "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "@vitejs/plugin-react": "^4.0.3",
